# rustc-analysis

./: crate_analysis.sh  db_scheme_setup.sql  dep_analysis.sh  github_analysis.sh  github_fetch.sh  readme.md
rustc-analysis/: Cargo.toml  db_scheme_setup.sql  placeholder.duckdb  schema_erd.mmd
rustc-analysis/src/utils/: cli.rs  db.rs  directed_graph.rs  mod.rs
rustc-analysis/test_crate/: Cargo.toml
rustc-analysis/test_crate/src/: main.rs
shell_scripts/: repo_analysis.sh
syn-analysis/: Cargo.toml  README.md
syn-analysis/src/: main.rs
