[package]
name = "rustc-analysis"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustc_analysis"
path = "src/bin/rustc_analysis.rs"

[[bin]]
name = "rustc_analysis_wrapper"
path = "src/bin/rustc_analysis_wrapper.rs"

[toolchain]
channel = "nightly"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
duckdb = { version = "1", features = ["bundled"] }
shlex = "2"
